clusters/cl01tl/manifests/pigallery2/Service-pigallery2.yaml
apiVersion: v1
kind: Service
metadata:
  name: pigallery2
  labels:
    app.kubernetes.io/instance: pigallery2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pigallery2
    app.kubernetes.io/service: pigallery2
    helm.sh/chart: pigallery2-5.3.0
  namespace: pigallery2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: pigallery2
    app.kubernetes.io/name: pigallery2
