clusters/cl01tl/manifests/pigallery2/HTTPRoute-pigallery2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pigallery2
  labels:
    app.kubernetes.io/instance: pigallery2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pigallery2
    helm.sh/chart: pigallery2-5.3.0
  annotations:
    gethomepage.dev/description: Gallery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/href: https://gallery.alexlebens.dev
    gethomepage.dev/icon: sh-pigallery2-light.webp
    gethomepage.dev/name: Pictures
    gethomepage.dev/siteMonitor: http://pigallery2.pigallery2:80
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "450"
  namespace: pigallery2
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "gallery.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pigallery2
          namespace: pigallery2
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
